--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="codeplayer">
 		<header class="codeplayer__nav">
-    		<h1>say-codeplayer</h1>
+    		<h1>Live HTML, CSS and JS</h1>
             <div class="codeplayer__button-container">
                 <button class="codeplayer__button" id="runButton">Run</button> or
                 <code>Shift + Enter</code>
